Add DEB-packages to the build process

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ stages:
   - build
   - test
   - pages
+  - deb
 
 # If you want to compile everything also on merge_request, change this template.
 # If you want to compile on one platform see [1] note below.
@@ -281,4 +282,60 @@ pages:
     paths:
       - public
 
+variables:
+  CCACHE_WORK_DIR: $CI_PROJECT_DIR/.ccache
 
+# 6. build debian packages
+.deb_template: &deb_definition
+  stage: deb
+  only:
+    - branches
+  script:
+    - cd $CI_PROJECT_DIR/deb/yadedaily
+    - apt-get update && apt-get -y build-dep .
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
+        "y4pak") echo "43" ;;
+        "c4pak") echo "43" ;;
+        "y6pak") echo "46" ;;
+        "c6pak") echo "46" ;;
+        "y7pak") echo "46" ;;
+        "c7pak") echo "46" ;;
+        "yade-runner") echo "12" ;;
+        "yade-runner-01") echo "1" ;;
+        *) echo "8";;
+        esac)
+    - echo $JOBSNUM
+    - export CCACHE_DIR=${CCACHE_WORK_DIR}
+    - DEB_BUILD_OPTIONS=noddebs dpkg-buildpackage -j$JOBSNUM
+#    - dpkg-buildpackage -j$JOBSNUM
+    - ccache -s
+    - rm -rf $CI_PROJECT_DIR/deb/yadedaily
+    - ls -l $CI_PROJECT_DIR/deb
+  artifacts:
+    paths:
+      - ./deb
+    expire_in: 5 day
+  cache:
+    paths:
+      - ${CCACHE_WORK_DIR}
+
+deb_buster:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
+  before_script:
+    - rm -rf ./deb
+    - ./scripts/ppa_ci/builddeb.py -d "buster"
+
+deb_stretch:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  before_script:
+    - rm -rf ./deb
+    - ./scripts/ppa_ci/builddeb.py -d "stretch"
+
+deb_bionic:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  before_script:
+    - rm -rf ./deb
+    - ./scripts/ppa_ci/builddeb.py -d "bionic"
