--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -181,6 +181,29 @@ test_suse15:
   dependencies:
     - make_suse15
 
+test_18_foam:
+  stage: test
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04_foam
+  only:
+    - master
+    - merge_request
+  dependencies:
+    - make_18_04
+  script:
+    - cat /etc/os-release
+    - ls -la /root/OpenFOAM/OpenFOAM-6/etc/bashrc
+    - source  /root/OpenFOAM/OpenFOAM-6/etc/bashrc
+    - git clone https://github.com/dpkn31/Yade-OpenFOAM-coupling
+    - cd Yade-OpenFOAM-coupling
+    - git checkout yadetest
+    - ./Allwmake
+    - cd /builds/yade-dev/trunk/examples/openfoam/example_icoFoamYade
+    - ln -s /builds/yade-dev/trunk/install/bin/yade-ci ./yadeimport.py
+    - blockMesh
+    - decomposePar
+    - mkdir yadep
+    - ./run3.sh --allow-run-as-root
+
 
 # Four new images:
 # image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
