--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -191,18 +191,7 @@ test_18_foam:
     - make_18_04
   script:
     - cat /etc/os-release
-    - ls -la /root/OpenFOAM/OpenFOAM-6/etc/bashrc
-    - source  /root/OpenFOAM/OpenFOAM-6/etc/bashrc
-    - git clone https://github.com/dpkn31/Yade-OpenFOAM-coupling
-    - cd Yade-OpenFOAM-coupling
-    - git checkout yadetest
-    - ./Allwmake
-    - cd /builds/yade-dev/trunk/examples/openfoam/example_icoFoamYade
-    - ln -s /builds/yade-dev/trunk/install/bin/yade-ci ./yadeimport.py
-    - blockMesh
-    - decomposePar
-    - mkdir yadep
-    - ./run3.sh --allow-run-as-root
+    - /builds/yade-dev/trunk/scripts/checks-and-tests/testOpenFoam.sh
 
 
 # Four new images:
