--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -519,8 +519,8 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 	if (flatThreshold>=0 && cell->info().volume() <= flatThreshold) cell->info().blocked = true;
 	if ((flow.fluidBulkModulus>0 || thermalEngine) && desiredPorosity>0 && !cell->info().blocked) { 
 		cell->info().invVoidVolume() = 1. / cell->info().volume();
-	} else if ((flow.fluidBulkModulus>0 || thermalEngine) && desiredPorosity == 0 && !cell->info().blocked) {
-		cell->info().invVoidVolume() = 1. / max(0.001*abs(cell->info().volume()),(abs(cell->info().volume()) - flow.volumeSolidPore(cell) ));
+	} else if ((flow.fluidBulkModulus>0 || thermalEngine || iniVoidVolumes) && desiredPorosity == 0 && !cell->info().blocked) {
+		cell->info().invVoidVolume() = 1. / ( std::abs(cell->info().volume()) - flow.volumeSolidPore(cell) );
 	}
 	}
 	if (debug) cout << "Volumes initialised." << endl;
