some small fixes and typos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,9 +148,9 @@ IF(BOOST_LOGGER)
   ADD_DEFINITIONS("-D YADE_BOOST_LOG")
   ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
   IF (DEBUG)
-    MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON.")
+    MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON. File will be very large with full debug info inside.")
   ELSE (DEBUG)
-    MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. What will come out of this?")
+    MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. Logging will work nicely, backtraces will not have debug info, files will be small.")
   ENDIF (DEBUG)
 ENDIF(BOOST_LOGGER)
 
