Remove hundreds of warnings in OpenSuse 15 g++ 7.4 (only .gitlab-ci.yml pipeline), also ignore multi-line comment warning.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,6 +112,9 @@ make_buster:
 make_suse15:
   <<: *make_definition
   <<: *artifacts_definition
+  before_script:
+    - export CXXFLAGS="-Wno-int-in-bool-context -Wno-comment $CXXFLAGS"
+    - echo $CXXFLAGS
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
 
 
