--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ stages:
         *) echo "8";;
         esac)
     - echo $JOBSNUM
+    - export CCACHE_DIR=/root/.ccache
     - ccache -s
     - DEB_BUILD_OPTIONS=noddebs dpkg-buildpackage -j$JOBSNUM
 #    - dpkg-buildpackage -j$JOBSNUM
