--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ stages:
 make_16_04:
   <<: *make_definition
   <<: *artifacts_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04
 
 make_18_04:
   <<: *make_definition
@@ -129,7 +129,7 @@ make_suse15:
 
 test_16_04:
   <<: *test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04
   dependencies:
     - make_16_04
 
@@ -171,11 +171,6 @@ test_18_foam:
     - /builds/yade-dev/trunk/scripts/checks-and-tests/testOpenFoam.sh
 
 
-# Four new images:
-# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
-# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
-# image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
-# image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
 # 3.2. check stage
 .check_template: &check_definition
   <<: *platforms_definition
@@ -189,7 +184,7 @@ test_18_foam:
 
 check_16_04:
   <<: *check_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04
   dependencies:
     - make_16_04
 
