Restore old config: build debs on master only.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -260,7 +260,7 @@ pages:
 .deb_template: &deb_definition
   stage: deb
   only:
-    - merge_request
+    - master
   script:
     - cd $CI_PROJECT_DIR/deb/yadedaily
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
