More verbose messages in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,9 +148,15 @@ IF(BOOST_LOGGER)
   ADD_DEFINITIONS("-D YADE_BOOST_LOG")
   ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
   IF (DEBUG)
-    MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON. File will be very large with full debug info inside.")
+    MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON. Files will be very large with full debug info inside.")
   ELSE (DEBUG)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. Logging will work nicely, backtraces will not have debug info, files will be small.")
+  ENDIF (DEBUG)
+ELSE(BOOST_LOGGER)
+  IF (DEBUG)
+    MESSAGE(STATUS "Disabling boost::log library (only rudimentary LOG_* macros will work) and DEBUG=ON. Files will be very large with full debug info inside.")
+  ELSE (DEBUG)
+    MESSAGE(STATUS "Disabling boost::log library (only rudimentary LOG_* macros will work, and only up to LOG_WARN) and DEBUG=OFF. Backtraces will not have debug info, files will be small.")
   ENDIF (DEBUG)
 ENDIF(BOOST_LOGGER)
 
