--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -49,14 +49,14 @@ par=argparse.ArgumentParser(usage='%s [options] [ simulation.xml[.bz2] | script.
   Available features: %s.\
   Homepage http://www.yade-dem.org, code hosted at http://www.launchpad.net/yade."%features
   )
-par.add_argument('-V','--version',help='Print version and exit.',dest='version',action='store_true')
+par.add_argument('-v','--version',help='Print version and exit.',dest='version',action='store_true')
 par.add_argument('-j','--threads',help='Number of OpenMP threads to run; defaults to 1. Equivalent to setting OMP_NUM_THREADS environment variable.',dest='threads',type=int)
 par.add_argument('--cores',help='Set number of OpenMP threads (as \-\-threads) and in addition set affinity of threads to the cores given. Please provide a string with comma-separated core-ids.',dest='cores',type=str)
 par.add_argument('-mit','--mpi-interactive-threads',help='Number of MPI threads (interactive mode, master+spawns). Values <2 disables mit, -mit x sets 1 master and x-1 workers.',dest='mit',default=0,type=int)
 par.add_argument('--update',help='Update deprecated class names in given script(s) using text search & replace. Changed files will be backed up with ~ suffix. Exit when done without running any simulation.',dest='updateScripts',nargs='+')
 par.add_argument('--nice',help='Increase nice level (i.e. decrease priority) by given number.',dest='nice',type=int)
 par.add_argument('-x',help='Exit when the script finishes',dest='exitAfter',action='store_true')
-par.add_argument('-v',help=('Set "Default" logging verbosity https://yade-dem.org/doc/prog.html#log-levels, default is -v3 for all classes.'+
+par.add_argument('-f',help=('Set "Default" filter for logging https://yade-dem.org/doc/prog.html#log-levels, default is -f3 for all classes.'+
                 ('' if 'BoostLog' in features else " (Since this build doesn't use boost::log this option is unavailable, use cmake option -DBOOST_LOGGER=ON to enable)")),dest='verbosity',type=int)
 par.add_argument('-n',help="Run without graphical interface (equivalent to unsetting the DISPLAY environment variable)",dest='nogui',action='store_true')
 par.add_argument('--test',help="Run regression test suite and exit; the exists status is 0 if all tests pass, 1 if a test fails and 2 for an unspecified exception.",dest="test",action='store_true')
