Better CMakeLists.txt verbosity about BOOST_LOGGER

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,7 @@ ELSE (DEBUG)
 ENDIF (DEBUG)
 
 IF(BOOST_LOGGER)
+  MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[m")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
   ADD_DEFINITIONS("-D YADE_BOOST_LOG")
   ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
@@ -163,6 +164,7 @@ IF(BOOST_LOGGER)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. Logging will work nicely, backtraces will not have debug info, files will be small.")
   ENDIF (DEBUG)
 ELSE(BOOST_LOGGER)
+  MESSAGE(STATUS "${Esc}[36mLog filtering: disabled${Esc}[m")
   IF (DEBUG)
     MESSAGE(STATUS "Disabling boost::log library (only rudimentary LOG_* macros will work) and DEBUG=ON. Files will be very large with full debug info inside.")
   ELSE (DEBUG)
@@ -789,7 +791,11 @@ INSTALL(TARGETS yade DESTINATION ${YADE_LIB_PATH})
 MESSAGE(STATUS "===========================================================")
 MESSAGE(STATUS "Yade configured with following features:${CONFIGURED_FEATS}")
 MESSAGE(STATUS "Disabled features:${DISABLED_FEATS}")
-MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}${Esc}[m")
+IF(BOOST_LOGGER)
+  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=ON${Esc}[m")
+ELSE(BOOST_LOGGER)
+  MESSAGE(STATUS "${Esc}[36mUsing MAX_LOG_LEVEL=${MAX_LOG_LEVEL}, BOOST_LOGGER=OFF${Esc}[m")
+ENDIF(BOOST_LOGGER)
 IF (DEBUG)
   MESSAGE(STATUS "Debug build")
   SET (debugbuild " (debug build)")
