--- a/scripts/ppa_ci/debian/control
+++ b/scripts/ppa_ci/debian/control
@@ -114,8 +114,7 @@ Depends:
  python3-pyqt5.qtwebkit,
  python3-tk,
  python3-xlib,
- python3-ipython [!xenial],
- ipython3 [xenial],
+ python3-ipython | ipython3,
  python3-future,
  ${misc:Depends},
  ${python:Depends},
