Improve documentation, small fix in CMakeLists.txt regarding detection of MAX_LOG_LEVEL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,7 +157,7 @@ IF(BOOST_LOGGER)
   ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
   IF (DEBUG)
     MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON. Files will be very large with full debug info inside.")
-    IF(MAX_LOG_LEVEL < 6)
+    IF(${MAX_LOG_LEVEL} LESS 6)
       MESSAGE(STATUS "${Esc}[33mWarning: using DEBUG=ON with MAX_LOG_LEVEL=${MAX_LOG_LEVEL} (less than 6, the maximum log level) rarely makes sense, use cmake option MAX_LOG_LEVEL=6 to fix this.${Esc}[m")
     ENDIF()
   ELSE (DEBUG)
